--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "26.0.2"
 
     defaultConfig {
-        applicationId "com.example.fileexplorer"
+        applicationId "org.qampus.filemanager"
         minSdkVersion 16
         targetSdkVersion 15
     }
