--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.fileexplorer"
+    package="org.qampus.filemanager"
     android:versionCode="1"
     android:versionName="1.0">
-
-    <!--<uses-sdk-->
-        <!--android:minSdkVersion="8"-->
-        <!--android:targetSdkVersion="15" />-->
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -15,7 +11,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".FileexplorerActivity"
+            android:name=".MainActivity"
             android:label="@string/title_activity_fileexplorer"
             android:theme="@android:style/Theme.Holo">
             <intent-filter>
@@ -29,7 +25,7 @@
             android:name=".FileChooser"
             android:label="Choose File"
             android:theme="@android:style/Theme.Holo">
-            <action android:name="com.example.fileexplorer.FileChooser" />
+            <action android:name="org.qampus.filemanager.FileChooser" />
 
             <category android:name="android.intent.category.DEFAULT" />
         </activity>
