--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,18 +3,20 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 16
     buildToolsVersion "26.0.2"
-
     defaultConfig {
         applicationId "org.qampus.filemanager"
         minSdkVersion 16
         targetSdkVersion 15
+        versionCode 1
+        versionName '1'
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
+    }
+    productFlavors {
     }
 }
 
