--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.qampus.filemanager"
-    android:versionCode="1"
-    android:versionName="1.0">
+    package="org.qampus.filemanager">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/exploraa"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_fileexplorer"
-            android:theme="@android:style/Theme.Holo">
+            android:theme="@android:style/Theme.Holo.Light">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,7 +22,7 @@
         <activity
             android:name=".FileChooser"
             android:label="Choose File"
-            android:theme="@android:style/Theme.Holo">
+            android:theme="@android:style/Theme.Holo.Light">
             <action android:name="org.qampus.filemanager.FileChooser" />
 
             <category android:name="android.intent.category.DEFAULT" />
