--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jan 06 13:30:36 WIB 2018
+#Wed Jan 10 19:54:43 WIB 2018
+ndk.dir=/Users/sansob/Library/Android/sdk/ndk-bundle
 sdk.dir=/Users/sansob/Library/Android/sdk
